unpackaged/main/default/objects/Financial_Advisor_Team__c/Financial_Advisor_Team__c.object-meta.xml
<CustomObject>
    <label>Financial Advisor Team</label>
    <nameField>
        <label>Financial Advisor Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Advisor Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>