unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Advisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Advisor_Group__c</referenceTo>
    <relationshipLabel>Financial Advisor Teams</relationshipLabel>
    <relationshipName>Financial_Advisor_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>