unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Associate_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Associate_Advisor__c</fullName>
    <inlineHelpText>This is the person on your team who will take Associate Advisor tasks if you do not have an Associate Advisor on your team.</inlineHelpText>
    <label>Associate Advisor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>