unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <inlineHelpText>This is the person on your team who will take CSA tasks if you do not have a CSA on your team.</inlineHelpText>
    <label>CSA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>