unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Draft_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Draft_Paperwork__c</fullName>
    <inlineHelpText>This is the person on your team who will draft all paperwork.</inlineHelpText>
    <label>Draft Paperwork</label>
    <length>80</length>
    <type>Text</type>
</CustomField>