unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <formula>TEXT(Primary_Financial_Advisor__r.Employment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Type</label>
    <type>Text</type>
</CustomField>