unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/of_Rep_Codes__c.field-meta.xml
<CustomField>
    <fullName>of_Rep_Codes__c</fullName>
    <label># of Rep Codes</label>
    <summaryForeignKey>Rep_Code__c.Financial_Advisor_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>