unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <label>Operations</label>
    <length>80</length>
    <type>Text</type>
</CustomField>