unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Orion_ID__c.field-meta.xml
<CustomField>
    <fullName>Orion_ID__c</fullName>
    <label>Orion ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>