unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Primary_Financial_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Financial_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Financial Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Advisor_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>