unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Public_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_ID__c</fullName>
    <label>Public Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>