unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Registered_States__c.field-meta.xml
<CustomField>
    <fullName>Registered_States__c</fullName>
    <label>Registered States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>