unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Rep_ID__c</fullName>
    <formula>TEXT(VALUE(SUBSTITUTE( RIGHT( TEXT(Orion_ID__c), 5), &#39;,&#39;, &#39;&#39;)))</formula>
    <label>Rep ID</label>
    <type>Text</type>
</CustomField>