unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>Rep_Number__c</fullName>
    <label>Rep Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>