unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Review_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Review_Paperwork__c</fullName>
    <inlineHelpText>This is the person on your team who will review all paperwork. This may be the same person who drafted it.</inlineHelpText>
    <label>Review Paperwork</label>
    <length>80</length>
    <type>Text</type>
</CustomField>