unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/RIA_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>RIA_Platform_Fee__c</fullName>
    <formula>text( Primary_Financial_Advisor__r.Platform_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RIA Platform Fee</label>
    <type>Text</type>
</CustomField>