unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Send_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Send_Notifications__c</fullName>
    <inlineHelpText>This is the person on your team who will send email notifications to clients, you, outside managers, and custodians.</inlineHelpText>
    <label>Send Notifications</label>
    <length>80</length>
    <type>Text</type>
</CustomField>