unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Tiered_IMA_Advisory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tiered_IMA_Advisory_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiered IMA Advisory Fee</label>
    <type>Checkbox</type>
</CustomField>