unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Trading__c.field-meta.xml
<CustomField>
    <fullName>Trading__c</fullName>
    <inlineHelpText>This is the person on your team who will enter trades.</inlineHelpText>
    <label>Trading</label>
    <length>80</length>
    <type>Text</type>
</CustomField>