unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/Users_On_Team__c.field-meta.xml
<CustomField>
    <fullName>Users_On_Team__c</fullName>
    <label>Users On Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>