unpackaged/main/default/objects/Financial_Advisor_Team__c/fields/X4268__c.field-meta.xml
<CustomField>
    <fullName>X4268__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4268</label>
    <type>Checkbox</type>
</CustomField>