unpackaged/main/default/objects/Financial_Advisor_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rep_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Number_of_Active_Advisors__c</columns>
    <columns>Status__c</columns>
    <columns>Advisor_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>