unpackaged/main/default/objects/Financial_Advisor_Team__c/listViews/Home_Office_Financial_Advisor_Team.listView-meta.xml
<ListView>
    <fullName>Home_Office_Financial_Advisor_Team</fullName>
    <filterScope>Queue</filterScope>
    <label>Home Office</label>
    <queue>Home_Office</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>